--- a/login.html
+++ b/login.html
@@ -43,16 +43,20 @@
   <p id="error" class="error">❌ Incorrect login! Try again.</p>
 
   <script>
-    function checkLogin() {
-      const username = document.getElementById("username").value.trim().toLowerCase();
-      const password = document.getElementById("password").value;
-
-      if (username === "mdparent67" && password === "7783732") {
-        window.location.href = "home.html";
-      } else {
-        document.getElementById("error").style.display = "block";
-      }
-    }
+  function _0x5d9f(){const _0x3e725b=['value','password','5925815sKyCap','location','mdparent67',
+   '5080626uerxxO','1LGsasM','17630RDYHNJ','1371406ErTWgz','getElementById','3fRhMge','href','style',
+   '12490230juhxcV','home.html','720ODFooo','block','toLowerCase','1166972pghUHO','trim','1476472mMILVa',
+   '7783732','username','display'];_0x5d9f=function(){return _0x3e725b;};return _0x5d9f();}(function(_0x4d7d1d,
+   _0x2b10af){const _0x39eda6=_0x5c7e,_0x4c5e0b=_0x4d7d1d();while(!![]){try{const _0x2d9070=-parseInt(_0x39eda6(0xc2))/
+   0x1*(parseInt(_0x39eda6(0xc4))/0x2)+-parseInt(_0x39eda6(0xc6))/0x3*(parseInt(_0x39eda6(0xb6))/0x4)+-parseInt(_0x39eda6(0xc3))
+   /0x5*(-parseInt(_0x39eda6(0xb3))/0x6)+-parseInt(_0x39eda6(0xbe))/0x7+parseInt(_0x39eda6(0xb8))/0x8+parseInt(_0x39eda6(0xc1))/
+   0x9+parseInt(_0x39eda6(0xc9))/0xa;if(_0x2d9070===_0x2b10af)break;else _0x4c5e0b['push'](_0x4c5e0b['shift']());}catch(_0x5a918b)
+   {_0x4c5e0b['push'](_0x4c5e0b['shift']());}}}(_0x5d9f,0x91ce9));function _0x5c7e(_0x9a852c,_0x2e6b55){const _0x5d9f50=_0x5d9f();
+   return _0x5c7e=function(_0x5c7e78,_0x3404d1){_0x5c7e78=_0x5c7e78-0xb3;let _0x303f99=_0x5d9f50[_0x5c7e78];return _0x303f99;},_0x5c7e
+   (_0x9a852c,_0x2e6b55);}function checkLogin(){const _0x59a49a=_0x5c7e,_0x843241=document[_0x59a49a(0xc5)](_0x59a49a(0xba))['value']
+   [_0x59a49a(0xb7)]()[_0x59a49a(0xb5)](),_0x57cbf5=document[_0x59a49a(0xc5)](_0x59a49a(0xbd))[_0x59a49a(0xbc)];_0x843241===_0x59a49a
+   (0xc0)&&_0x57cbf5===_0x59a49a(0xb9)?window[_0x59a49a(0xbf)][_0x59a49a(0xc7)]=_0x59a49a(0xca):document['getElementById']('error')
+   [_0x59a49a(0xc8)][_0x59a49a(0xbb)]=_0x59a49a(0xb4);}
   </script>
 </body>
 </html>
