--- a/login.html
+++ b/login.html
@@ -42,6 +42,17 @@
   <button onclick="checkLogin()">Log In</button>
   <p id="error" class="error">❌ Incorrect login! Try again.</p>
 
+  <noscript>
+  <style>
+    body > * { display: none !important; }
+  </style>
+  <div style="text-align:center; margin-top:50px;">
+    <h1>❌ JavaScript Required</h1>
+    <p>This site needs JavaScript to work. Please enable it!</p>
+  </div>
+</noscript>
+
+
   <script>
   function _0x5d9f(){const _0x3e725b=['value','password','5925815sKyCap','location','mdparent67',
    '5080626uerxxO','1LGsasM','17630RDYHNJ','1371406ErTWgz','getElementById','3fRhMge','href','style',
