--- a/home.html
+++ b/home.html
@@ -307,6 +307,18 @@
     <button onclick="document.getElementById('cookie-banner').style.display='none'">Accept</button>
   </div>
 
+
+	<noscript>
+  <style>
+    body > * { display: none !important; }
+  </style>
+  <div style="text-align:center; margin-top:50px;">
+    <h1>❌ JavaScript Required</h1>
+    <p>This site needs JavaScript to work. Please enable it!</p>
+  </div>
+</noscript>
+
+	
   <script>
     const reasons = [
       "I can call you if I’m ever in trouble 🚨",
