--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
     }
 
     checkIP();
+    
   </script>
+
+  <noscript>
+  <style>
+    body > * { display: none !important; }
+  </style>
+  <div style="text-align:center; margin-top:50px;">
+    <h1>❌ JavaScript Required</h1>
+    <p>This site needs JavaScript to work. Please enable it!</p>
+  </div>
+</noscript>
+
+  
 </head>
 <body>
   <h2 style="text-align: center;">🔍 Checking if you're allowed in...</h2>
