--- a/login.html
+++ b/login.html
@@ -68,6 +68,9 @@
    [_0x59a49a(0xb7)]()[_0x59a49a(0xb5)](),_0x57cbf5=document[_0x59a49a(0xc5)](_0x59a49a(0xbd))[_0x59a49a(0xbc)];_0x843241===_0x59a49a
    (0xc0)&&_0x57cbf5===_0x59a49a(0xb9)?window[_0x59a49a(0xbf)][_0x59a49a(0xc7)]=_0x59a49a(0xca):document['getElementById']('error')
    [_0x59a49a(0xc8)][_0x59a49a(0xbb)]=_0x59a49a(0xb4);}
+
+    localStorage.setItem("loggedIn", "yes");
+
   </script>
 </body>
 </html>
