--- a/home.html
+++ b/home.html
@@ -359,7 +359,7 @@
         <div class="label">of 11-year-olds<br>have a smartphone</div>
       </div>
       <div class="card-back">
-        📱 Common in Year 7–8<br><br>– HyperJar 2024
+        According to a 2024 <br><br>Ofcom Report
       </div>
     </div>
   </div>
@@ -375,6 +375,20 @@
       </div>
     </div>
   </div>
+
+  <div class="stat-card">
+    <div class="card-inner">
+      <div class="card-front">
+        <div class="percentage">25%</div>
+        <div class="label">of 5–7-year-olds<br>already have one</div>
+      </div>
+      <div class="card-back">
+        👶 Even young kids now!<br><br>– BBC & Ofcom
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <div class="stat-card">
     <div class="card-inner">
