--- a/home.html
+++ b/home.html
@@ -359,7 +359,7 @@
         <div class="label">of 11-year-olds<br>have a smartphone</div>
       </div>
       <div class="card-back">
-        According to a 2024 <br><br>Ofcom Report
+        According to <b>Ofcom</b>
       </div>
     </div>
   </div>
@@ -367,11 +367,11 @@
   <div class="stat-card">
     <div class="card-inner">
       <div class="card-front">
-        <div class="percentage">50%</div>
-        <div class="label">of 10-year-olds<br>own a smartphone</div>
+        <div class="percentage">97%</div>
+        <div class="label">of Year 8's own a smartphone</div>
       </div>
       <div class="card-back">
-        🧒 Getting one by age 10<br><br>– Ofcom 2023
+        Only 3% in Year 8 don't own a phone 📱
       </div>
     </div>
   </div>
@@ -379,11 +379,11 @@
   <div class="stat-card">
     <div class="card-inner">
       <div class="card-front">
-        <div class="percentage">25%</div>
-        <div class="label">of 5–7-year-olds<br>already have one</div>
+        <div class="percentage">89%</div>
+        <div class="label">of children without phones report feeling left out</div>
       </div>
       <div class="card-back">
-        👶 Even young kids now!<br><br>– BBC & Ofcom
+        89% report feeling left out and extreme FOMO
       </div>
     </div>
   </div>
