--- a/home.html
+++ b/home.html
@@ -323,24 +323,30 @@
 	 <h2>🙄 Bad Reasons vs. My Comebacks 💪</h2>
   <div class="card-grid">
     <div class="reason-card">
-      <div class="front">'I'll use it at school'</div>
+      <div class="front">'You'll use it at school'</div>
       <div class="back">School has just gone phone-free! It would be in a pouch the whole day.</div>
     </div>
     <div class="reason-card">
-      <div class="front">“You’re too young.”</div>
-      <div class="back">I’ve shown I’m responsible with chores and schoolwork!</div>
+      <div class="front">'You’re too young.'</div>
+      <div class="back">91% of 11 year olds have smart phones. It’s not just about fun — it helps me stay safe and connected when I’m out or coming home from school.</div>
     </div>
     <div class="reason-card">
-      <div class="front">“You don’t need one.”</div>
-      <div class="back">It’s not about needing, it’s about learning to use it wisely early on.</div>
+      <div class="front">'You don’t need one.'</div>
+      <div class="back">You don't need Andrex, or a cat, or a posh bike. It’s not about needing, it’s about learning to use it wisely early on.</div>
     </div>
     <div class="reason-card">
-      <div class="front">“You’ll just play games.”</div>
-      <div class="back">Only if allowed—and I’ll balance it with real-life responsibilities!</div>
+      <div class="front">'It's a distraction from schoolwork.'</div>
+      <div class="back">I can use Do Not Disturb or focus mode when I study. Plus, I think it would help me get better
+      at the educational things I already do, such as Duolingo & Mimo.</div>
     </div>
     <div class="reason-card">
-      <div class="front">“Too much screentime is bad.”</div>
-      <div class="back">I’ll follow screen time limits you set and take breaks often!</div>
+      <div class="front">'Too much screentime is bad.'</div>
+      <div class="back">I’ll follow screen time limits you set and take breaks if needed.</div>
+    </div>
+	<div class="reason-card">
+      <div class="front">'You'll be exposed to bad stuff online'</div>
+      <div class="back">You can help me set up parental controls, and I’ll only install safe apps.
+	We can agree on rules for what I can and can’t use — and you can check my phone anytime</div>
     </div>
   </div>
 
