--- a/home.html
+++ b/home.html
@@ -310,8 +310,8 @@
           <p>Like Duolingo, Mimo & Chess.com</p>
         </div>
         <div class="game-box">
-          <h3>✅ </h3>
-          <p>That’s not a strong reason for something important.</p>
+          <h3>✅ Fitting in socially</h3>
+          <p>91% of Year 7s have smartphones 📱</p>
         </div>
         <div class="game-box good">
           <h3>✅ So I can call you when I’m doing something afterschool or other activities</h3>
