--- a/home.html
+++ b/home.html
@@ -440,7 +440,8 @@
       "I’ll use it to check homework and calendars 📚",
       "I’ll follow all screen-time rules ⏳",
       "I’ll prove I’m ready with responsibility points ✅",
-      "It’ll help me navigate with maps when I’m older 🗺️"
+      "It’ll help me navigate with maps when I’m older 🗺️",
+	"I am not fat 🤪"
     ];
 
     function showReason() {
